# add_executable(exercise-one exercise_one.cpp)
# add_executable(exercise-two exercise_two.cpp)
# add_executable(exercise-three exercise_three.cpp)
# add_executable(exercise-four exercise_four.cpp)
# add_executable(exercise_five exercise_five.cpp)
# add_executable(exercise_six exercise_six.cpp)
# add_executable(exercise_seven exercise_seven.cpp)
# add_executable(exercise_eight exercise_eight.cpp)
# add_executable(exercise_nine exercise_nine.cpp)
# add_executable(exercise_ten exercise_ten.cpp)
add_executable(exercise_11 exercise_11.cpp)