add_executable(exercise_01 exercise_01.cpp)
add_executable(exercise_02 exercise_02.cpp)
add_executable(exercise_03 exercise_03.cpp)
add_executable(exercise_04 exercise_04.cpp)
add_executable(exercise_05 exercise_05.cpp)
add_executable(exercise_06 exercise_06.cpp)
add_executable(exercise_07 exercise_07.cpp)
add_executable(exercise_08 exercise_08.cpp)
add_executable(exercise_09 exercise_09.cpp)
add_executable(exercise_11 exercise_11.cpp)